News UAT/force-app/main/default/objects/Line_Item_Threshold__c/Line_Item_Threshold__c.object-meta.xml
<CustomObject>
    <description>LIT object  will sit within the current Print catalogue and related to ‘Print Publication’ Product Node records and related Node Advert Assignment records for PPT</description>
    <label>Line Item Threshold</label>
    <nameField>
        <displayFormat>LLT-{000000}</displayFormat>
        <label>Line Item Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Item Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>