News UAT/force-app/main/default/objects/Line_Item_Threshold__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <description>Picklist for entering Approval Level</description>
    <inlineHelpText>Picklist for entering Approval Level</inlineHelpText>
    <label>Approval Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Level 1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Level 2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Level 3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Level 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>