News UAT/force-app/main/default/objects/Line_Item_Threshold__c/fields/Fri__c.field-meta.xml
<CustomField>
    <fullName>Fri__c</fullName>
    <description>Discount Value for Friday %</description>
    <inlineHelpText>Discount Value for Friday %</inlineHelpText>
    <label>Fri</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>