News UAT/force-app/main/default/objects/Line_Item_Threshold__c/fields/Mon__c.field-meta.xml
<CustomField>
    <fullName>Mon__c</fullName>
    <description>Discount Value for Monday %</description>
    <inlineHelpText>Discount Value for Monday %</inlineHelpText>
    <label>Mon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>