News UAT/force-app/main/default/objects/Line_Item_Threshold__c/fields/Node_Advert_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Node_Advert_Assignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Ad Size</description>
    <inlineHelpText>Lookup to Ad Size</inlineHelpText>
    <label>Node Advert Assignment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>csmso__Node_Advert_Assignment__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>csmso__Node_Advert_Assignment__c</referenceTo>
    <relationshipLabel>Line Item Thresholds</relationshipLabel>
    <relationshipName>Line_Item_Thresholds</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>