News UAT/force-app/main/default/objects/Line_Item_Threshold__c/fields/Product_Node__c.field-meta.xml
<CustomField>
    <fullName>Product_Node__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup  to Publication</description>
    <inlineHelpText>Lookup  to Publication</inlineHelpText>
    <label>Product Node</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>csmso__Product_Node__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>csmso__Product_Node__c</referenceTo>
    <relationshipLabel>Line Item Thresholds</relationshipLabel>
    <relationshipName>Line_Item_Thresholds</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>