News UAT/force-app/main/default/objects/Line_Item_Threshold__c/fields/Sat__c.field-meta.xml
<CustomField>
    <fullName>Sat__c</fullName>
    <description>Discount Value for Saturday %</description>
    <inlineHelpText>Discount Value for Saturday %</inlineHelpText>
    <label>Sat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>