News UAT/force-app/main/default/objects/Line_Item_Threshold__c/fields/Sun__c.field-meta.xml
<CustomField>
    <fullName>Sun__c</fullName>
    <description>Discount Value for Sunday %</description>
    <inlineHelpText>Discount Value for Sunday %</inlineHelpText>
    <label>Sun</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>