News UAT/force-app/main/default/objects/Line_Item_Threshold__c/fields/Thu__c.field-meta.xml
<CustomField>
    <fullName>Thu__c</fullName>
    <description>Discount Value for Thursday %</description>
    <inlineHelpText>Discount Value for Thursday %</inlineHelpText>
    <label>Thu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>