News UAT/force-app/main/default/objects/Line_Item_Threshold__c/fields/Tue__c.field-meta.xml
<CustomField>
    <fullName>Tue__c</fullName>
    <description>Discount Value for Tuesday %</description>
    <inlineHelpText>Discount Value for Tuesday %</inlineHelpText>
    <label>Tue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>