News UAT/force-app/main/default/objects/Line_Item_Threshold__c/fields/Wed__c.field-meta.xml
<CustomField>
    <fullName>Wed__c</fullName>
    <description>Discount Value for Wednesday %</description>
    <inlineHelpText>Discount Value for Wednesday %</inlineHelpText>
    <label>Wed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>