News UAT/force-app/main/default/objects/Line_Item_Threshold__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Node__c</columns>
    <columns>Node_Advert_Assignment__c</columns>
    <columns>Approval_Level__c</columns>
    <columns>Mon__c</columns>
    <columns>Tue__c</columns>
    <columns>Wed__c</columns>
    <columns>Thu__c</columns>
    <columns>Fri__c</columns>
    <columns>Sat__c</columns>
    <columns>Sun__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Node__c</field>
        <operation>contains</operation>
        <value>sunday tele</value>
    </filters>
    <label>All</label>
</ListView>