News UAT/force-app/main/default/objects/Line_Item_Threshold__c/listViews/Line_Item_Thresholds.listView-meta.xml
<ListView>
    <fullName>Line_Item_Thresholds</fullName>
    <columns>NAME</columns>
    <columns>Product_Node__c</columns>
    <columns>Node_Advert_Assignment__c</columns>
    <columns>Approval_Level__c</columns>
    <columns>Mon__c</columns>
    <columns>Tue__c</columns>
    <columns>Wed__c</columns>
    <columns>Thu__c</columns>
    <columns>Fri__c</columns>
    <columns>Sat__c</columns>
    <columns>Sun__c</columns>
    <columns>LIT_JSON__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Line Item Thresholds</label>
</ListView>